@@ -50,45 +50,45 @@ Class38=CWaveOutDialog
 Class39=CWavFileDlg
 
 ResourceCount=40
-Resource1=IDD_ABOUTBOX (Neutral (Default))
-Resource2=IDD_GEAR_PSYCHOSC (Neutral (Default))
-Resource3=IDD_INST_EDITOR (Neutral (Default))
-Resource4=IDD_PATDLG (Neutral (Default))
+Resource1=IDD_PRESETS (Neutral (Default))
+Resource2=IDD_INST_EDITOR (Neutral (Default))
+Resource3=IDD_OUTPUT (Neutral (Default))
+Resource4=IDD_INFO (Neutral (Default))
 Resource5=IDD_SEQUENCER (Neutral (Default))
-Resource6=IDD_GEAR_DELAY (Neutral (Default))
+Resource6=IDR_MACHINEFRAME (Neutral (Default))
 Resource7=IDD_INST_GENERAL (Neutral (Default))
-Resource8=IDD_SONGPROP (Neutral (Default))
-Resource9=IDD_CONFIGURATION (Neutral (Default))
-Resource10=IDD_KEYCONFIG (Neutral (Default))
-Resource11=IDD_DSOUNDCONFIG (Neutral (Default))
-Resource12=IDD_GEARDISTORT (Neutral (Default))
-Resource13=IDD_NEWMACHINE (Neutral (Default))
-Resource14=IDD_DIRECTORIES (Neutral (Default))
-Resource15=IDD_MASTERDLG (Neutral (Default))
-Resource16=IDD_GREETS (Neutral (Default))
-Resource17=IDD_ENVDIALOG (Neutral (Default))
+Resource8=IDD_ENVDIALOG (Neutral (Default))
+Resource9=IDD_GEAR_PSYCHOSC (Neutral (Default))
+Resource10=IDD_NEWVAL (Neutral (Default))
+Resource11=IDD_KEYCONFIG (Neutral (Default))
+Resource12=IDD_WAVEOUTCONFIG (Neutral (Default))
+Resource13=IDD_VSTRACK (Neutral (Default))
+Resource14=IDD_ABOUTBOX (Neutral (Default))
+Resource15=IDD_SKIN (Neutral (Default))
+Resource16=IDD_GEAR_TRACKER (Neutral (Default))
+Resource17=IDD_PATDLG (Neutral (Default))
 Resource18=IDR_POPUPMENU (Neutral (Default))
-Resource19=IDD_GEAR_FLANGER (Neutral (Default))
-Resource20=IDD_NEWVAL (Neutral (Default))
-Resource21=IDR_MACHINEFRAME (Neutral (Default))
-Resource22=IDD_OUTPUT (Neutral (Default))
-Resource23=IDD_GEAR_GAINER (Neutral (Default))
-Resource24=IDD_SKIN (Neutral (Default))
+Resource19=IDD_GREETS (Neutral (Default))
+Resource20=IDD_SONGPROP (Neutral (Default))
+Resource21=IDD_MIDI_MONITOR (Neutral (Default))
+Resource22=IDD_NEWMACHINE (Neutral (Default))
+Resource23=IDD_GEAR_FILTER (Neutral (Default))
+Resource24=IDD_GEAR_DELAY (Neutral (Default))
 Resource25=IDD_MACPROP (Neutral (Default))
-Resource26=IDD_PRESETS (Neutral (Default))
-Resource27=IDD_GEAR_FILTER (Neutral (Default))
-Resource28=IDD_WAVED_AMPLIFY (Neutral (Default))
+Resource26=IDD_GEAR_FLANGER (Neutral (Default))
+Resource27=IDD_INSTRUMENT (Neutral (Default))
+Resource28=IDD_DSOUNDCONFIG (Neutral (Default))
 Resource29=IDR_VSTFRAME (Neutral (Default))
-Resource30=IDR_WAVEFRAME (Neutral (Default))
-Resource31=IDD_PSYBAR (Neutral (Default))
-Resource32=IDD_MIDI_MONITOR (Neutral (Default))
-Resource33=IDD_INSTRUMENT (Neutral (Default))
-Resource34=IDD_VSTRACK (Neutral (Default))
-Resource35=IDD_PSYBAR2 (Neutral (Default))
-Resource36=IDD_INFO (Neutral (Default))
-Resource37=IDD_GEAR_TRACKER (Neutral (Default))
-Resource38=IDD_WIREDIALOG (Neutral (Default))
-Resource39=IDD_WAVEOUTCONFIG (Neutral (Default))
+Resource30=IDD_GEARDISTORT (Neutral (Default))
+Resource31=IDD_DIRECTORIES (Neutral (Default))
+Resource32=IDD_MASTERDLG (Neutral (Default))
+Resource33=IDD_WIREDIALOG (Neutral (Default))
+Resource34=IDD_GEAR_GAINER (Neutral (Default))
+Resource35=IDD_CONFIGURATION (Neutral (Default))
+Resource36=IDD_PSYBAR (Neutral (Default))
+Resource37=IDR_WAVEFRAME (Neutral (Default))
+Resource38=IDD_PSYBAR2 (Neutral (Default))
+Resource39=IDD_WAVED_AMPLIFY (Neutral (Default))
 Resource40=IDR_MAINFRAME (Neutral (Default))
 
 [CLS:CChildView]
@@ -1181,7 +1181,7 @@ Control16=IDC_HEADERDLG,static,1082130436
 [DLG:IDD_SEQUENCER (Neutral (Default))]
 Type=1
 Class=CMainFrame
-ControlCount=31
+ControlCount=30
 Control1=IDC_STATIC,static,1342308352
 Control2=IDC_FOLLOW,button,1342242819
 Control3=IDC_SEQLIST,listbox,1352730627
@@ -1190,29 +1190,28 @@ Control5=IDC_DECSHORT,button,1342246784
 Control6=IDC_SEQINS,button,1342242816
 Control7=IDC_SEQDEL,button,1342242816
 Control8=IDC_SEQCLR,button,1342242816
-Control9=IDC_SEQSPR,button,1342242816
-Control10=IDC_STATIC,static,1342308864
-Control11=IDC_DECPOS2,button,1342246784
-Control12=IDC_SEQ1,static,1342308865
-Control13=IDC_INCPOS2,button,1342246784
-Control14=IDC_STATIC,static,1342308864
-Control15=IDC_DECPAT2,button,1342246784
-Control16=IDC_SEQ2,static,1342308865
-Control17=IDC_INCPAT2,button,1342246784
-Control18=IDC_STATIC,static,1342308864
-Control19=IDC_DECLEN,button,1342246784
-Control20=IDC_SEQ3,static,1342308865
-Control21=IDC_INCLEN,button,1342246784
-Control22=IDC_STATIC,static,1342308352
-Control23=IDC_LENGTH,static,1342177793
-Control24=IDC_MULTICHANNEL_AUDITION,button,1342251011
-Control25=IDC_WRAP,button,1342242819
-Control26=IDC_CENTERCURSOR,button,1342242819
-Control27=IDC_CURSORDOWN,button,1342251011
-Control28=IDC_RECORD_NOTEOFF,button,1342251011
-Control29=IDC_INCLONG,button,1342246784
-Control30=IDC_DECLONG,button,1342246784
-Control31=IDC_SEQNEW,button,1342242816
+Control9=IDC_STATIC,static,1342308864
+Control10=IDC_DECPOS2,button,1342246784
+Control11=IDC_SEQ1,static,1342308865
+Control12=IDC_INCPOS2,button,1342246784
+Control13=IDC_STATIC,static,1342308864
+Control14=IDC_DECPAT2,button,1342246784
+Control15=IDC_SEQ2,static,1342308865
+Control16=IDC_INCPAT2,button,1342246784
+Control17=IDC_STATIC,static,1342308864
+Control18=IDC_DECLEN,button,1342246784
+Control19=IDC_SEQ3,static,1342308865
+Control20=IDC_INCLEN,button,1342246784
+Control21=IDC_STATIC,static,1342308352
+Control22=IDC_LENGTH,static,1342177793
+Control23=IDC_MULTICHANNEL_AUDITION,button,1342251011
+Control24=IDC_WRAP,button,1342242819
+Control25=IDC_CENTERCURSOR,button,1342242819
+Control26=IDC_CURSORDOWN,button,1342251011
+Control27=IDC_RECORD_NOTEOFF,button,1342251011
+Control28=IDC_INCLONG,button,1342246784
+Control29=IDC_DECLONG,button,1342246784
+Control30=IDC_SEQNEW,button,1342242816
 
 [DLG:IDD_DSOUNDCONFIG (Neutral (Default))]
 Type=1
