@@ -985,7 +985,7 @@ BEGIN
                     WS_BORDER,0,0,335,13
 END
 
-IDD_SEQUENCER DIALOGEX 0, 0, 70, 330
+IDD_SEQUENCER DIALOGEX 0, 0, 70, 295
 STYLE WS_CHILD
 EXSTYLE WS_EX_STATICEDGE
 FONT 8, "Tahoma"
@@ -993,50 +993,49 @@ BEGIN
     LTEXT           "Pattern Sequencer",IDC_STATIC,4,4,62,8
     CONTROL         "Follow song",IDC_FOLLOW,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,4,18,62,8
-    LISTBOX         IDC_SEQLIST,4,30,36,140,LBS_SORT | LBS_EXTENDEDSEL | 
+    LISTBOX         IDC_SEQLIST,4,30,36,124,LBS_SORT | LBS_EXTENDEDSEL | 
                     WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "+",IDC_INCSHORT,43,30,23,12,BS_BITMAP | BS_CENTER | 
                     BS_VCENTER,WS_EX_STATICEDGE
     PUSHBUTTON      "-",IDC_DECSHORT,43,62,23,12,BS_BITMAP | BS_CENTER | 
                     BS_VCENTER,WS_EX_STATICEDGE
-    PUSHBUTTON      "Ins",IDC_SEQINS,43,111,23,12,0,WS_EX_STATICEDGE
-    PUSHBUTTON      "Del",IDC_SEQDEL,43,127,23,12,0,WS_EX_STATICEDGE
-    PUSHBUTTON      "Clear",IDC_SEQCLR,43,143,23,12,0,WS_EX_STATICEDGE
-    PUSHBUTTON      "Sort",IDC_SEQSPR,43,159,23,12,0,WS_EX_STATICEDGE
-    LTEXT           "Po.",IDC_STATIC,4,177,9,8,SS_CENTERIMAGE
-    PUSHBUTTON      "<",IDC_DECPOS2,16,175,16,12,BS_BITMAP | BS_CENTER | 
+    PUSHBUTTON      "Ins",IDC_SEQINS,43,110,23,12,0,WS_EX_STATICEDGE
+    PUSHBUTTON      "Del",IDC_SEQDEL,43,126,23,12,0,WS_EX_STATICEDGE
+    PUSHBUTTON      "Clear",IDC_SEQCLR,43,142,23,12,0,WS_EX_STATICEDGE
+    LTEXT           "Po.",IDC_STATIC,4,159,9,8,SS_CENTERIMAGE
+    PUSHBUTTON      "<",IDC_DECPOS2,16,157,16,12,BS_BITMAP | BS_CENTER | 
                     BS_VCENTER,WS_EX_STATICEDGE
-    CTEXT           "000",IDC_SEQ1,32,175,16,12,SS_CENTERIMAGE,
+    CTEXT           "000",IDC_SEQ1,32,157,16,12,SS_CENTERIMAGE,
                     WS_EX_STATICEDGE
-    PUSHBUTTON      ">",IDC_INCPOS2,50,175,16,12,BS_BITMAP | BS_CENTER | 
+    PUSHBUTTON      ">",IDC_INCPOS2,50,157,16,12,BS_BITMAP | BS_CENTER | 
                     BS_VCENTER,WS_EX_STATICEDGE
-    LTEXT           "Pa.",IDC_STATIC,4,190,9,8,SS_CENTERIMAGE
-    PUSHBUTTON      "<",IDC_DECPAT2,16,188,16,12,BS_BITMAP | BS_CENTER | 
+    LTEXT           "Pa.",IDC_STATIC,4,172,9,8,SS_CENTERIMAGE
+    PUSHBUTTON      "<",IDC_DECPAT2,16,170,16,12,BS_BITMAP | BS_CENTER | 
                     BS_VCENTER,WS_EX_STATICEDGE
-    CTEXT           "000",IDC_SEQ2,32,188,16,12,SS_CENTERIMAGE,
+    CTEXT           "000",IDC_SEQ2,32,170,16,12,SS_CENTERIMAGE,
                     WS_EX_STATICEDGE
-    PUSHBUTTON      ">",IDC_INCPAT2,50,188,16,12,BS_BITMAP | BS_CENTER | 
+    PUSHBUTTON      ">",IDC_INCPAT2,50,170,16,12,BS_BITMAP | BS_CENTER | 
                     BS_VCENTER,WS_EX_STATICEDGE
-    LTEXT           "Ln.",IDC_STATIC,4,203,9,8,SS_CENTERIMAGE
-    PUSHBUTTON      "<",IDC_DECLEN,16,201,16,12,BS_BITMAP | BS_CENTER | 
+    LTEXT           "Ln.",IDC_STATIC,4,185,9,8,SS_CENTERIMAGE
+    PUSHBUTTON      "<",IDC_DECLEN,16,183,16,12,BS_BITMAP | BS_CENTER | 
                     BS_VCENTER,WS_EX_STATICEDGE
-    CTEXT           "000",IDC_SEQ3,32,201,16,12,SS_CENTERIMAGE,
+    CTEXT           "000",IDC_SEQ3,32,183,16,12,SS_CENTERIMAGE,
                     WS_EX_STATICEDGE
-    PUSHBUTTON      ">",IDC_INCLEN,50,201,16,12,BS_BITMAP | BS_CENTER | 
+    PUSHBUTTON      ">",IDC_INCLEN,50,183,16,12,BS_BITMAP | BS_CENTER | 
                     BS_VCENTER,WS_EX_STATICEDGE
-    LTEXT           "Length",IDC_STATIC,4,216,24,12
-    CTEXT           "00:00",IDC_LENGTH,35,215,31,12,SS_CENTERIMAGE | NOT 
+    LTEXT           "Length",IDC_STATIC,4,198,24,12
+    CTEXT           "00:00",IDC_LENGTH,35,197,31,12,SS_CENTERIMAGE | NOT 
                     WS_GROUP,WS_EX_STATICEDGE
     CONTROL         "Multichannel Audition",IDC_MULTICHANNEL_AUDITION,"Button",
-                    BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,5,229,62,16
+                    BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,5,211,62,16
     CONTROL         "Wrap Around",IDC_WRAP,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,5,247,56,11
+                    WS_TABSTOP,5,229,56,11
     CONTROL         "Center Cursor",IDC_CENTERCURSOR,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,5,260,62,12
+                    BS_AUTOCHECKBOX | WS_TABSTOP,5,244,62,12
     CONTROL         "Cursor Always Down",IDC_CURSORDOWN,"Button",
-                    BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,6,275,60,19
+                    BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,6,256,60,19
     CONTROL         "Record NoteOffs",IDC_RECORD_NOTEOFF,"Button",
-                    BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,5,291,60,19
+                    BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,5,273,60,19
     PUSHBUTTON      "++",IDC_INCLONG,43,46,23,12,BS_BITMAP | BS_CENTER | 
                     BS_VCENTER,WS_EX_STATICEDGE
     PUSHBUTTON      "-",IDC_DECLONG,43,78,23,12,BS_BITMAP | BS_CENTER | 
@@ -1405,7 +1404,7 @@ BEGIN
         LEFTMARGIN, 4
         RIGHTMARGIN, 66
         TOPMARGIN, 7
-        BOTTOMMARGIN, 329
+        BOTTOMMARGIN, 294
     END
 
     IDD_DSOUNDCONFIG, DIALOG
